# jpsl

./: .gitignore  CMakeLists.txt  README.md
examples/: map_3d.cpp
examples/data/: 5x5x5.3dmap
include/: jps.hpp
include/jps/: dir.hpp  encodings.hpp  jps.hpp  point.hpp
include/jpsl/: dir.hpp  encodings.hpp  jpsl.hpp  point.hpp
src/: dir.cpp  encodings.cpp  generate_lookup_table.cpp  jps.cpp  jpsl.cpp  lookup_table.cpp  main.cpp  point.cpp
test/: test3x3.cpp  test_3x3.cpp  test_encodings.cpp  test_jps.cpp  test_jump.cpp  test_standardize_dir.cpp
